CorfuStore streaming redesign part 3 - implementation and integration.
Implements the new subscription API and new threading model for
streaming and integrate into CorfuStore.